# testArduinoSensors

./: .gitignore  CMakeLists.txt  Library_List.txt
arduino_libraries/Adafruit_BMP280/: Adafruit_BMP280.cpp
src/: CMakeLists.txt  main.cpp
